Fixes comment delete button alignment

--- a/src/styling/ArticleCard.css
+++ b/src/styling/ArticleCard.css
@@ -53,7 +53,7 @@
   color: #9ba0b3;
 }
 
-/* .fa-arrow:hover {
+.fa-arrow:hover {
   cursor: pointer;
   -webkit-transform: translateY(-4px);
   transform: translateY(-4px);
@@ -61,7 +61,7 @@
   transition-duration: 0.3s;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
-} */
+}
 
 .stats {
   display: flex;
