--- a/src/styling/ArticlePage.css
+++ b/src/styling/ArticlePage.css
@@ -87,6 +87,11 @@ h4 {
   color: #9ba0b3;
   margin: 0;
   margin-top: 10px;
+  flex: 1 1 0px;
+}
+
+.infoDate {
+  text-align: right;
 }
 
 .bold {
@@ -105,7 +110,7 @@ h4 {
 }
 
 .deleteComment {
-  margin-left: 0.5em;
+  flex: 1 1 0px;
   font-family: ibm-plex-mono, sans-serif;
   background-color: transparent;
   border: none;
